plugins {
    id 'java-library'
    id 'idea'
    id 'maven-publish'
    id "net.neoforged.moddev" version "2.0.141"
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/maven.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/publishing-2.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/utils.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/changelog.gradle'

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

version = createModVersion(project)
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

neoForge {
    version = neoforge_version

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }

        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    mavenLocal()
    commonMavenRepos(repositories)

    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
        content {
            includeGroup "mezz.jei"
        }
    }

    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }
}

dependencies {
    implementation "dev.ftb.mods:ftb-library-neoforge:${ftb_library_version}"
    implementation "dev.ftb.mods:ftb-teams-neoforge:${ftb_teams_version}"

    compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    runtimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"

    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

//    implementation "curse.maven:fancymenu-367706:6408877"
//    runtimeOnly "curse.maven:konkrete-410295:5453385"
//    runtimeOnly "curse.maven:melody-938643:5453382"
//
    compileOnly "curse.maven:irisshaders-455508:7867946"
//    compileOnly "curse.maven:embeddium-908741:6118392"

//    runtimeOnly "curse.maven:ftb-essentials-410811:6979622"
//    api("dev.latvian.mods:kubejs-neoforge:2101.7.2-build.261")
//    interfaceInjectionData("dev.latvian.mods:kubejs-neoforge:2101.7.2-build.261") // optional

//    compileOnly "curse.maven:reliquified-twilight-forest-1186617:6880511"
//    runtimeOnly "curse.maven:the-twilight-forest-227639:7398100"
//    runtimeOnly "curse.maven:octo-lib-916747:6932487"
//    runtimeOnly "curse.maven:relics-mod-445274:7533442"
}

tasks.register("sourcesJar", Jar) {
    archiveClassifier.set("sources")
    from sourceSets.main.allJava
}

// Uncomment this if you want to create an API jar
// tasks.register("apiJar", Jar) {
// 	archiveClassifier.set("api")

// 	from sourceSets.main.output

// 	include 'dev/ftb/mods/{package_name}/api/**'
// }

tasks.named("jar") {
    dependsOn("sourcesJar")
    // Uncomment this if you want to create an API jar
    // dependsOn("apiJar")
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            version: version,
            mod_id: mod_id,
            minecraft_version_range: minecraft_version_range,
            neoforge_loader_version: neoforge_loader_version,
            minecraft_version: minecraft_version,
            supported_minecraft_versions: supported_minecraft_versions,
            neoforge_version: neoforge_version,
            neoforge_version_range: neoforge_version_range,
            ftb_library_version_range: ftb_library_version_range,
            ftb_teams_version_range: ftb_teams_version_range
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }

    // Copy in the repos license file
    from(project.rootDir) {
        include 'LICENSE.md'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishMods {
    def CFToken = providers.environmentVariable("CURSEFORGE_KEY");

    dryRun = !CFToken.isPresent()
    displayName = "[NEOFORGE] ${mod_name} ${project.version}"
    modLoaders.add("neoforge")

    changelog = createChangelog(project)
    file = jar.archiveFile
    version = project.version // Pretty sure it defaults to this

    type = createReleaseType(project)

    curseforge {
        accessToken = CFToken.orElse("missing")
        projectId = project.curseforge_id
        minecraftVersions.add(project.minecraft_version)
        javaVersions.add(JavaVersion.VERSION_25)

        requires("ftb-library-forge")
    }
}

createMavenPublishingBlock(project)
